Fix calculateCollapsedCount in MultiDimEmbedSettingsPanel

--- a/site/multiDim/DimensionDropdown.scss
+++ b/site/multiDim/DimensionDropdown.scss
@@ -19,6 +19,11 @@ $toggle-full-width-breakpoint: 520px;
         margin-left: 8px;
     }
 
+    &--hidden {
+        position: absolute;
+        visibility: hidden;
+    }
+
     &:hover:not([data-disabled]),
     &:focus:not([data-disabled]) {
         border-color: $blue-30;
